# mlc_dev

./: .gitignore  Fre_arrange.ipynb  Fre_arrange_deap.py  Fre_arrange_geatpy.py  LICENSE  README.md  Side Work.ipynb  pyproject.toml  requirements.txt  setup.py
logo/: LTD Sign.gds  tsinghua logo large.GDS  tsinghua logo.GDS
output/: C.gds  C_array_2inch.gds  C_array_4inch.gds  C_array_4inch_new.gds  Inductor.3mf  Inductor.gds  Inductor.ply  Inductor.stl  Inductor2um.gds  Inductor3um.gds  Inductor3um_2.gds  Inductor4um.gds  Inductor_Low.gds  LC_array_4inch_with_votage_division.gds  LC_array_4inch_with_votage_division_er11.gds  LC_array_4inch_without_votage_division.gds  LC_array_4inch_without_votage_division_er11.gds  PPC_5MHz.gds  SInd_4u.gds  SInductor.gds  STDChip.gds  TestArray.gds  TestArray测试内容.txt  TestChip.gds  fre_table.txt  fretable.txt  test_dielectric1.gds  test_dielectric2.gds  testboard.3mf  testboard.stl
src/: Chip_Generator.py  Component.py  Component_Generator.py  First Board.py  Layer_Definition.py  Parameters_Classes.py  Simulation.py
